NSG_RT/NSG_Routetable_v1.0.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "asg-uks-vm-file": {
            "type": "string",
            "defaultValue":"asg-ukcore-uks-filesrv"
        },
        "asg-uks-vm-adds": {
            "type": "string",
            "defaultValue":"asg-ukcore-uks-adds"
        },
        "asg-gwc-vm-file": {
            "type": "string",
            "defaultValue":"asg-ukcore-gwc-adds"
        },
        "asg-gwc-vm-adds": {
            "type": "string",
            "defaultValue":"asg-ukcore-gwc-filesrv"
        },
        "uks-prod-core-nsg-name": {
            "type": "string",
            "defaultValue":"uks-prod-core-nsg"
        },
        "gwc-dr-asr-nsg-name": {
            "type": "string",
            "defaultValue":"gwc-dr-asr-nsg"
        },
        "uks-dmz-hub-nsg-name": {
            "type": "string",
            "defaultValue":"uks-dmz-hub-nsg"
        },
        "gwc-dr-hub-nsg-name": {
            "type": "string",
            "defaultValue":"gwc-dr-hub-nsg"
        },
        "rt-exphub-uks-hub-nva": {
            "type": "string",
            "defaultValue":"rt-exphub-uks-hub-nva"
        },
        "rt-exphub-gwc-hub-nva": {
            "type": "string",
            "defaultValue":"rt-exphub-gwc-hub-nva"
        },
        "rt-ukcore-uks-prod": {
            "type": "string",
            "defaultValue":"rt-ukcore-uks-prod"
        },
        "rt-ukcore-gwc-dr": {
            "type": "string",
            "defaultValue":"rt-ukcore-gwc-dr"
        },        
        "coreSubscriptionId": {
            "type": "string",
            "defaultValue": "69f26762-afa0-46b5-8311-4fbdf35b3060"
        },
        "hubSubscriptionId": {
            "type": "string",
            "defaultValue": "12f61549-9674-4fc1-b79b-baa2e31ceecf"
        },
        "dmzhubvnetRg": {
            "type": "string",
            "defaultValue": "uks-dmz-prod-hub-rg"
        },
        "drhubvnetRg": {
            "type": "string",
            "defaultValue": "gwc-dmz-dr-hub-rg"
        },
        "coreprodvnetRg": {
            "type": "string",
            "defaultValue": "uks-core-prod-rg"
        },
        "drasrvnetRg": {
            "type": "string",
            "defaultValue": "gwc-dr-asr-rg"
        },
        "workspaceName": {
            "type": "string",
            "defaultValue":"uks-az-law-p4"
        },
        "workspaceResourceGroup": {
            "type": "string",
            "defaultValue": "uks-dmz-prod-hub-rg"
        },
        "workspaceSubscriptionID": {
            "type": "string",
            "defaultValue": "12f61549-9674-4fc1-b79b-baa2e31ceecf"
        }
    },           
    "resources": [
            {
                "name": "DMZHub-NSG-RT-ASG",
                "type": "Microsoft.Resources/deployments",
                "apiVersion": "2021-04-01",
                "subscriptionId":"[parameters('hubSubscriptionId')]",
                "resourceGroup": "[parameters('dmzhubvnetRg')]",
                "properties": {
                    "mode": "Incremental",
                    "template": {
                        "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                        "contentVersion": "1.0.0.0",
                        "variables": {},
                        "resources": [                         
                            {
                                "name": "[parameters('rt-exphub-uks-hub-nva')]",
                                "type": "Microsoft.Network/routeTables",
                                "apiVersion": "2020-11-01",
                                "location": "UK South",
                                "tags": {},
                                "properties": {
                                    "routes": [
                                        {
                                            "name": "route-hub-mgmt-to-pa-nva",
                                            "properties": {
                                                "addressPrefix": "0.0.0.0/0",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.32.102"
                                            }
                                        }
                                    ],
                                    "disableBgpRoutePropagation": true
                                }
                            },
                            {
                                "name": "[parameters('uks-dmz-hub-nsg-name')]",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "location": "UK South",
                                "properties": {
                                    "securityRules": [
                                        {
                                            "name": "Allow-VirtualAppliance-SSH-Onprem",
                                            "properties": {
                                                "description": "Allow-VirtualAppliance-SSH-Onprem",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 1010,
                                                "direction": "Inbound"
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "type": "Microsoft.Resources/deploymentScripts",
                                "apiVersion": "2020-10-01",
                                "kind": "AzurePowerShell",
                                "name": "WaitSection",
                                "dependsOn": [
                                    "[resourceId(parameters('hubSubscriptionId'), parameters('dmzhubvnetRg'), 'Microsoft.Network/networkSecurityGroups',parameters('uks-dmz-hub-nsg-name'))]"
                                ],
                                "location": "UK South",                                
                                "properties": {
                                    "azPowerShellVersion": "3.0",
                                    "scriptContent": "start-sleep -Seconds 15",
                                    "cleanupPreference": "Always",
                                    "retentionInterval": "PT1H"
                                }
                            },
                            {
                                "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
                                "apiVersion": "2021-05-01-preview",                                
                                "name": "[concat(parameters('uks-dmz-hub-nsg-name'), '/Microsoft.Insights/', parameters('uks-dmz-hub-nsg-name'),'-diagnostics')]",
                                "dependsOn":["WaitSection"],
                                "properties": {
                                    "workspaceId": "[resourceId(parameters('workspaceSubscriptionID'), parameters('workspaceResourceGroup'),'Microsoft.OperationalInsights/workspaces', parameters('WorkspaceName'))]",
                                    "logs":[
                                        {
                                            "categoryGroup":"allLogs",
                                            "enabled":true
                                        }
                                    ]
                                }
                            }
                        ],
                        "outputs": {}
                    }
                }
            },
            {
                "name": "DRHub-NSG-RT-ASG",
                "type": "Microsoft.Resources/deployments",
                "apiVersion": "2021-04-01",
                "subscriptionId":"[parameters('hubSubscriptionId')]",
                "resourceGroup": "[parameters('drhubvnetRg')]",
                "properties": {
                    "mode": "Incremental",
                    "template": {
                        "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                        "contentVersion": "1.0.0.0",
                        "variables": {},
                        "resources": [                           
                            {
                                "name": "[parameters('rt-exphub-gwc-hub-nva')]",
                                "type": "Microsoft.Network/routeTables",
                                "apiVersion": "2020-11-01",
                                "location": "Germany West Central",
                                "tags": {},
                                "properties": {
                                    "routes": [
                                        {
                                            "name": "route-hub-mgmt-to-pa-nva",
                                            "properties": {
                                                "addressPrefix": "0.0.0.0/0",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.96.100"
                                            }
                                        }
                                    ],
                                    "disableBgpRoutePropagation": true
                                }
                            },
                            {
                                "name": "[parameters('gwc-dr-hub-nsg-name')]",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "location": "Germany West Central",
                                "properties": {
                                    "securityRules": [
                                        {
                                            "name": "Allow-VirtualAppliance-SSH-Onprem",
                                            "properties": {
                                                "description": "Allow-VirtualAppliance-SSH-Onprem",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 1010,
                                                "direction": "Inbound"
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "type": "Microsoft.Resources/deploymentScripts",
                                "apiVersion": "2020-10-01",
                                "kind": "AzurePowerShell",
                                "name": "WaitSection",
                                "location": "Germany West Central",
                                "dependsOn": [
                                    "[resourceId(parameters('hubSubscriptionId'), parameters('drhubvnetRg'), 'Microsoft.Network/networkSecurityGroups',parameters('gwc-dr-hub-nsg-name'))]"
                                ],
                                "properties": {
                                    "azPowerShellVersion": "3.0",
                                    "scriptContent": "start-sleep -Seconds 15",
                                    "cleanupPreference": "Always",
                                    "retentionInterval": "PT1H"
                                }
                            },
                            {
                                "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
                                "apiVersion": "2021-05-01-preview",
                                "name": "[concat(parameters('gwc-dr-hub-nsg-name'), '/Microsoft.Insights/', parameters('gwc-dr-hub-nsg-name'),'-diagnostics')]",
                                "dependsOn":["WaitSection"],
                                "properties": {
                                    "workspaceId": "[resourceId(parameters('workspaceSubscriptionID'), parameters('workspaceResourceGroup'),'Microsoft.OperationalInsights/workspaces', parameters('WorkspaceName'))]",
                                    "logs":[
                                        {
                                            "categoryGroup":"allLogs",
                                            "enabled":true
                                        }
                                    ]
                                }
                            }
                        ],
                        "outputs": {}
                    }
                }
            },
            {
                "name": "UKCore-Prod-NSG-RT-ASG",
                "type": "Microsoft.Resources/deployments",
                "apiVersion": "2021-04-01",
                "subscriptionId":"[parameters('coreSubscriptionId')]",
                "resourceGroup":"[parameters('coreprodvnetRg')]",
                "properties": {
                    "mode": "Incremental",
                    "template": {
                        "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                        "contentVersion": "1.0.0.0",
                        "variables": {},
                        "resources": [
                            {
                                "name": "[parameters('asg-uks-vm-adds')]",
                                "type": "Microsoft.Network/applicationSecurityGroups",
                                "apiVersion": "2020-11-01",                                
                                "location": "UK South",
                                "tags": {},
                                "properties": {}
                            },
                            {
                                "name": "[parameters('asg-uks-vm-file')]",
                                "type": "Microsoft.Network/applicationSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "location": "UK South",
                                "tags": {},
                                "properties": {}
                            },
                            {
                                "name": "[parameters('uks-prod-core-nsg-name')]",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "dependsOn": [
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'), 'Microsoft.Network/applicationSecurityGroups', parameters('asg-uks-vm-adds'))]",
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'), 'Microsoft.Network/applicationSecurityGroups', parameters('asg-uks-vm-file'))]"
                                ],
                                "location": "UK South",
                                "properties": {
                                    "securityRules": [
                                        {
                                            "name": "Allow-RDP-FileSrv-Onprem",
                                            "properties": {
                                                "description": "Allow-RDP-FileSrv-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange":"3389",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                        "id": "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-uks-vm-file'))]"                                                        
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1010,
                                                "direction": "Inbound"
                                            }
                                        },
                                        {
                                            "name": "Allow-SMB-FileSrv-Onprem",
                                            "properties": {
                                                "description": "Allow-SMB-FileSrv-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange":"445",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                        "id": "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-uks-vm-file'))]"                                                        
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1020,
                                                "direction": "Inbound"
                                            }
                                        },
                                        {
                                            "name": "Allow-ADDS-Mgmt-Onprem",
                                            "properties": {
                                                "description": "Allow-ADDS-Mgmt-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "DestinationPortRanges": [
                                                    "3389",
                                                    "88",
                                                    "53",
                                                    "389",
                                                    "636",
                                                    "123",
                                                    "135",
                                                    "464",
                                                    "3268",
                                                    "3269",
                                                    "445",
                                                    "49152-65535"
                                                ],
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                        "id": "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-uks-vm-adds'))]"                                                        
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1030,
                                                "direction": "Inbound"
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "type": "Microsoft.Resources/deploymentScripts",
                                "apiVersion": "2020-10-01",
                                "kind": "AzurePowerShell",
                                "name": "WaitSection",
                                "location": "UK South",
                                "dependsOn": [
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('coreprodvnetRg'), 'Microsoft.Network/networkSecurityGroups', parameters('uks-prod-core-nsg-name'))]"
                                ],
                                "properties": {
                                    "azPowerShellVersion": "3.0",
                                    "scriptContent": "start-sleep -Seconds 15",
                                    "cleanupPreference": "Always",
                                    "retentionInterval": "PT1H"
                                }
                            },                            
                            {
                                "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
                                "apiVersion": "2021-05-01-preview",
                                "name": "[concat(parameters('uks-prod-core-nsg-name'), '/Microsoft.Insights/', parameters('uks-prod-core-nsg-name'),'-diagnostics')]",
                                "dependsOn":["WaitSection"],
                                "properties": {
                                    "workspaceId": "[resourceId(parameters('workspaceSubscriptionID'), parameters('workspaceResourceGroup'),'Microsoft.OperationalInsights/workspaces', parameters('WorkspaceName'))]",
                                    "logs":[
                                        {
                                            "categoryGroup":"allLogs",
                                            "enabled":true
                                        }
                                    ]
                                }
                            },
                            {
                                "name": "[parameters('rt-ukcore-uks-prod')]",
                                "type": "Microsoft.Network/routeTables",
                                "apiVersion": "2020-11-01",
                                "location": "UK South",
                                "tags": {},
                                "properties": {
                                    "routes": [
                                        {
                                            "name": "route-vpn-tunnel-to-ps-internal-01",
                                            "properties": {
                                                "addressPrefix": "10.8.36.0/22",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.32.196"
                                            }
                                        },
                                        {
                                            "name": "route-vpn-tunnel-to-ps-internal-02",
                                            "properties": {
                                                "addressPrefix": "10.8.40.0/22",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.32.197"
                                            }
                                        },
                                        {
                                            "name": "route-prod-core-to-pa-nva",
                                            "properties": {
                                                "addressPrefix": "0.0.0.0/0",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.32.102"
                                            }
                                        }
                                    ],
                                    "disableBgpRoutePropagation": true
                                }
                            }
                        ],                    
                        "outputs": {}
                    }
                }
            },
            {
                "name": "UKCore-DR-NSG-RT-ASG",
                "type": "Microsoft.Resources/deployments",
                "apiVersion": "2021-04-01",
                "subscriptionId":"[parameters('coreSubscriptionId')]",
                "resourceGroup":"[parameters('drasrvnetRg')]",
                "properties": {
                    "mode": "Incremental",
                    "template": {
                        "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                        "contentVersion": "1.0.0.0",
                        "variables": {},
                        "resources": [
                            {
                                "name": "[parameters('asg-gwc-vm-adds')]",
                                "type": "Microsoft.Network/applicationSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "location": "Germany West Central",
                                "tags": {},
                                "properties": {}
                            },
                            {
                                "name": "[parameters('asg-gwc-vm-file')]",
                                "type": "Microsoft.Network/applicationSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "location": "Germany West Central",
                                "tags": {},
                                "properties": {}
                            },
                            {
                                "name": "[parameters('gwc-dr-asr-nsg-name')]",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "apiVersion": "2020-11-01",
                                "dependsOn": [
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('drasrvnetRg'), 'Microsoft.Network/applicationSecurityGroups', parameters('asg-gwc-vm-adds'))]",
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('drasrvnetRg'), 'Microsoft.Network/applicationSecurityGroups', parameters('asg-gwc-vm-file'))]"
                                ],
                                "location": "Germany West Central",
                                "properties": {
                                    "securityRules": [
                                        {
                                            "name": "Allow-RDP-FileSrv-Onprem",
                                            "properties": {
                                                "description": "Allow-RDP-FileSrv-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange":"3389",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                        "id": "[resourceId(parameters('coreSubscriptionId'),parameters('drasrvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-gwc-vm-file'))]"                                                        
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1010,
                                                "direction": "Inbound"
                                            }
                                        },
                                        {
                                            "name": "Allow-SMB-FileSrv-Onprem",
                                            "properties": {
                                                "description": "Allow-SMB-FileSrv-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange":"445",
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                       "id": "[resourceId(parameters('coreSubscriptionId'),parameters('drasrvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-gwc-vm-file'))]"      
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1020,
                                                "direction": "Inbound"
                                            }
                                        },
                                        {
                                            "name": "Allow-ADDS-Mgmt-Onprem",
                                            "properties": {
                                                "description": "Allow-ADDS-Mgmt-Onprem",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRanges": [
                                                    "3389",
                                                    "88",
                                                    "53",
                                                    "389",
                                                    "636",
                                                    "123",
                                                    "135",
                                                    "464",
                                                    "3268",
                                                    "3269",
                                                    "445",
                                                    "49152-65535"
                                                ],
                                                "sourceAddressPrefixes": [
                                                    "10.80.0.0/12",
                                                    "10.64.0.0/12"
                                                ],
                                                "destinationApplicationSecurityGroups": [
                                                    {
                                                        "id": "[resourceId(parameters('coreSubscriptionId'),parameters('drasrvnetRg'),'Microsoft.Network/applicationSecurityGroups', parameters('asg-gwc-vm-adds'))]"                                                        
                                                    }                                                                                                     
                                                ],
                                                "access": "Allow",
                                                "priority": 1030,
                                                "direction": "Inbound"
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "type": "Microsoft.Resources/deploymentScripts",
                                "apiVersion": "2020-10-01",
                                "kind": "AzurePowerShell",
                                "name": "WaitSection",
                                "location": "Germany West Central",
                                "dependsOn": [
                                    "[resourceId(parameters('coreSubscriptionId'), parameters('drasrvnetRg'), 'Microsoft.Network/networkSecurityGroups', parameters('gwc-dr-asr-nsg-name'))]"
                                ],
                                "properties": {
                                    "azPowerShellVersion": "3.0",
                                    "scriptContent": "start-sleep -Seconds 15",
                                    "cleanupPreference": "Always",
                                    "retentionInterval": "PT1H"
                                }
                            },
                            {
                                "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
                                "apiVersion": "2021-05-01-preview",
                                "location":"Germany West Central",
                                "name": "[concat(parameters('gwc-dr-asr-nsg-name'), '/Microsoft.Insights/', 'test-diagnostics')]",
                                "dependsOn":["WaitSection"],
                                "properties": {
                                    "workspaceId": "[resourceId(parameters('workspaceSubscriptionID'), parameters('workspaceResourceGroup'),'Microsoft.OperationalInsights/workspaces', parameters('WorkspaceName'))]",
                                    "logs":[
                                        {
                                            "categoryGroup":"allLogs",
                                            "enabled":true
                                        }
                                    ]
                                }
                            },
                            {
                                "name": "[parameters('rt-ukcore-gwc-dr')]",
                                "type": "Microsoft.Network/routeTables",
                                "apiVersion": "2020-11-01",
                                "location": "Germany West Central",
                                "tags": {},
                                "properties": {
                                    "routes": [
                                        {
                                            "name": "route-vpn-tunnel-to-ps-internal-01",
                                            "properties": {
                                                "addressPrefix": "10.8.100.0/22",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.96.196"
                                            }
                                        },
                                        {
                                            "name": "route-dr-asr-to-pa-nva",
                                            "properties": {
                                                "addressPrefix": "0.0.0.0/0",
                                                "nextHopType": "VirtualAppliance",
                                                "nextHopIpAddress": "10.8.96.100"
                                            }
                                        }
                                    ],
                                    "disableBgpRoutePropagation": true
                                }
                            }
                        ],                    
                        "outputs": {}
                    }
                }
            }
        ]
    }
